Started work on FOPL ND recursive goal search.